k8s/envoy-gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass

metadata:
  name: envoy-gateway-class

spec:
  # Envoy Gateway will manage Gateways that use this class.
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
