k8s/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: rabbitmq-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: rabbitmq

  template:
    metadata:
      labels:
        app: rabbitmq

    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:4-management

          ports:
            # RabbitMQ messaging port
            - containerPort: 5672

            # RabbitMQ Management website port
            - containerPort: 15672
  
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
  
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-data-pvc
