k8s/orderservice-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: orderservice-service

spec:
  selector:
    app: orderservice

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
