k8s/sqlserver-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: sqlserver-service

spec:
  selector:
    app: sqlserver

  ports:
    - name: sqlserver
      protocol: TCP
      port: 1433
      targetPort: 1433

  type: ClusterIP
