k8s/microservices-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: microservices-gateway

spec:
  # Envoy manages this Gateway.
  gatewayClassName: envoy-gateway-class

  listeners:
    # Accept incoming HTTP traffic on port 80.
    - name: http
      protocol: HTTP
      port: 80
